--- a/m1/Python Essentials 2.ipynb
+++ b/m1/Python Essentials 2.ipynb
@@ -1100,6 +1100,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "62781414",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 6\n",
+      "6 is not a prime number.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# task: Python Program to Check Prime Number\n",
+    "def is_prime(num):\n",
+    "    if num <= 1:\n",
+    "        return False\n",
+    "    if num <= 3:\n",
+    "        return True\n",
+    "\n",
+    "    if num % 2 == 0 or num % 3 == 0:\n",
+    "        return False\n",
+    "\n",
+    "    i = 5\n",
+    "    while i * i <= num:\n",
+    "        if num % i == 0 or num % (i + 2) == 0:\n",
+    "            return False\n",
+    "        i += 6\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "# result \n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "if is_prime(num):\n",
+    "    print(num, \"is a prime number.\")\n",
+    "else:\n",
+    "    print(num, \"is not a prime number.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f3e4de54",
    "metadata": {
@@ -1111,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d2908c22",
    "metadata": {
     "colab": {
@@ -1131,14 +1173,22 @@
     "outputId": "f4658a76-40a3-461a-f484-b79d441984c8",
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:Android\n"
+     ]
+    }
+   ],
    "source": [
     "a=input('Enter your name:')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0e3cffdc",
    "metadata": {
     "colab": {
@@ -1157,27 +1207,46 @@
     "id": "0e3cffdc",
     "outputId": "d10effe8-d4a5-464e-8374-ef430ef047dc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Android\n"
+     ]
+    }
+   ],
    "source": [
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9643f3b8",
    "metadata": {
     "id": "9643f3b8",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Android'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a # input takes values as string by default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "19254745",
    "metadata": {
     "colab": {
@@ -1196,14 +1265,22 @@
     "id": "19254745",
     "outputId": "1f73c0c8-d94e-4603-b333-672ec92a8279"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your age:56\n"
+     ]
+    }
+   ],
    "source": [
     "c=float(input('Enter your age:'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6b4b5faf",
    "metadata": {
     "colab": {
@@ -1222,9 +1299,49 @@
     "id": "6b4b5faf",
     "outputId": "efd07a34-13e2-49ef-dddc-ff236fc91340"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3ee466e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter boolean value:XYZ\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value=bool(input(\"Enter boolean value:\"))\n",
+    "value"
    ]
   },
   {
@@ -1312,19 +1429,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f8794c88",
    "metadata": {
     "id": "f8794c88"
    },
    "outputs": [],
    "source": [
-    "from datetime import date"
+    "from datetime import date\n",
+    "# import datetime"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3df143a1",
    "metadata": {
     "id": "3df143a1"
@@ -1336,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4e13a47f",
    "metadata": {
     "colab": {
@@ -1355,14 +1473,25 @@
     "id": "4e13a47f",
     "outputId": "8a900a84-1fe3-4bf9-eb4b-a7a4630f4876"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date(1996, 9, 13)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "55e602b4",
    "metadata": {
     "colab": {
@@ -1381,17 +1510,24 @@
     "id": "55e602b4",
     "outputId": "7008aead-4bf7-40d4-f9c7-2b169019bffa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Today's date is: 2023-10-31\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting today's date\n",
     "today1 = date.today()\n",
-    " \n",
-    "print(\"Today's date is\", today1)"
+    "print(\"Today's date is:\", today1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "009053e1",
    "metadata": {
     "colab": {
@@ -1410,14 +1546,25 @@
     "id": "009053e1",
     "outputId": "f514e35b-f5a9-4c44-c5e5-0ee6400077cf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "today1.isoweekday()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "f591dae6",
    "metadata": {
     "colab": {
@@ -1436,7 +1583,17 @@
     "id": "f591dae6",
     "outputId": "7d35f6e1-663d-42cd-e51d-d066ce08e913"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current year: 2023\n",
+      "Current month: 10\n",
+      "Current day: 31\n"
+     ]
+    }
+   ],
    "source": [
     "# Get Today’s Year, Month, and Date\n",
     "\n",
@@ -5676,7 +5833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
